@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-26T00:43:41Z",
+  "timestamp" : "2024-05-26T08:10:33Z",
   "count_outdated" : 1268,
   "uniques_outdated" : 800,
-  "count" : 1298,
-  "uniques" : 823,
+  "count" : 1299,
+  "uniques" : 824,
   "clones" : [
     {
       "timestamp": "2024-05-12T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
