@@ -1,3 +1,12 @@
+2024-05-26T08:10:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9241776886 # 307
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-26
+* notice: last 14d: unq all: 4 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 800 1268 / 823 1298
+* notice: next accum: outdated-unq outdated-all / unq all: 800 1268 / 824 1299
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-26]
+
 2024-05-26T00:43:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9239350452 # 306
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-26
